{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 226,
  "lineage": "8a8af948-b129-af39-2d9f-832dd0939b09",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ea44e3e904824109",
            "arn": "arn:aws:ec2:us-east-1:276824025294:elastic-ip/eipalloc-0ea44e3e904824109",
            "association_id": "eipassoc-00186f557a4d28e1c",
            "domain": "vpc",
            "id": "eipalloc-0ea44e3e904824109",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02842738eab1f27cc",
            "private_dns": "ip-10-0-1-47.ec2.internal",
            "private_ip": "10.0.1.47",
            "public_dns": "ec2-34-226-241-203.compute-1.amazonaws.com",
            "public_ip": "34.226.241.203",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "alpha",
              "Name": "silversupport-alpha-nat-eip",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "alpha",
              "ManagedBy": "Terraform",
              "Name": "silversupport-alpha-nat-eip",
              "Owner": "Aspire-Admin",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276824025294:internet-gateway/igw-079fb8ec9607feb6d",
            "id": "igw-079fb8ec9607feb6d",
            "owner_id": "276824025294",
            "tags": {
              "Environment": "alpha",
              "Name": "silversupport-alpha-igw",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "alpha",
              "ManagedBy": "Terraform",
              "Name": "silversupport-alpha-igw",
              "Owner": "Aspire-Admin",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bb2ba8aafc808e12"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "silversupport-alpha-logs",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:276824025294:loadbalancer/app/silversupport-alpha-alb/755cf36cee3581df",
            "arn_suffix": "app/silversupport-alpha-alb/755cf36cee3581df",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "silversupport-alpha-alb-1192425198.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:276824025294:loadbalancer/app/silversupport-alpha-alb/755cf36cee3581df",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "silversupport-alpha-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f97389a8dd7d819d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-007698f3873151b29"
              },
              {
                "subnet_id": "subnet-0283e507f0b1e3595"
              }
            ],
            "subnets": [
              "subnet-007698f3873151b29",
              "subnet-0283e507f0b1e3595"
            ],
            "tags": {
              "Environment": "alpha",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "alpha",
              "ManagedBy": "Terraform",
              "Owner": "Aspire-Admin",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bb2ba8aafc808e12",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_s3_bucket.logs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:276824025294:listener/app/silversupport-alpha-alb/755cf36cee3581df/699000bad4b4e107",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:276824025294:listener/app/silversupport-alpha-alb/755cf36cee3581df/699000bad4b4e107",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:276824025294:loadbalancer/app/silversupport-alpha-alb/755cf36cee3581df",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "alpha",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "alpha",
              "ManagedBy": "Terraform",
              "Owner": "Aspire-Admin",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_s3_bucket.logs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:276824025294:listener/app/silversupport-alpha-alb/755cf36cee3581df/7dae86a8e30fcc36",
            "certificate_arn": "arn:aws:acm:us-east-1:276824025294:certificate/0af480c4-083f-4913-a359-9e20ff1be1c6",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:276824025294:targetgroup/silversupport-alpha-app-tg/12caddb7a6578e17",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:276824025294:listener/app/silversupport-alpha-alb/755cf36cee3581df/7dae86a8e30fcc36",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:276824025294:loadbalancer/app/silversupport-alpha-alb/755cf36cee3581df",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {
              "Environment": "alpha",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "alpha",
              "ManagedBy": "Terraform",
              "Owner": "Aspire-Admin",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.main",
            "aws_acm_certificate_validation.main",
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_route53_record.cert_validation",
            "aws_s3_bucket.logs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:276824025294:targetgroup/silversupport-alpha-app-tg/12caddb7a6578e17",
            "arn_suffix": "targetgroup/silversupport-alpha-app-tg/12caddb7a6578e17",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:276824025294:targetgroup/silversupport-alpha-app-tg/12caddb7a6578e17",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:276824025294:loadbalancer/app/silversupport-alpha-alb/755cf36cee3581df"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "silversupport-alpha-app-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "alpha",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "alpha",
              "ManagedBy": "Terraform",
              "Owner": "Aspire-Admin",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bb2ba8aafc808e12"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ea44e3e904824109",
            "association_id": "eipassoc-00186f557a4d28e1c",
            "connectivity_type": "public",
            "id": "nat-061acf8806db5bae2",
            "network_interface_id": "eni-02842738eab1f27cc",
            "private_ip": "10.0.1.47",
            "public_ip": "34.226.241.203",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-007698f3873151b29",
            "tags": {
              "Environment": "alpha",
              "Name": "silversupport-alpha-nat-gw",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "alpha",
              "ManagedBy": "Terraform",
              "Name": "silversupport-alpha-nat-gw",
              "Owner": "Aspire-Admin",
              "Project": "SilverSupport",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276824025294:route-table/rtb-05fe9f0c234a5a273",
            "id": "rtb-05fe9f0c234a5a273",
            "owner_id": "276824025294",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-061acf8806db5bae2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "alpha",
              "Name": "silversupport-alpha-private-rt",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "alpha",
              "ManagedBy": "Terraform",
              "Name": "silversupport-alpha-private-rt",
              "Owner": "Aspire-Admin",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb2ba8aafc808e12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276824025294:route-table/rtb-0b7cb029b37517f96",
            "id": "rtb-0b7cb029b37517f96",
            "owner_id": "276824025294",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079fb8ec9607feb6d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "alpha",
              "Name": "silversupport-alpha-public-rt",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "alpha",
              "ManagedBy": "Terraform",
              "Name": "silversupport-alpha-public-rt",
              "Owner": "Aspire-Admin",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb2ba8aafc808e12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e25ae9c7a01f3141",
            "route_table_id": "rtb-05fe9f0c234a5a273",
            "subnet_id": "subnet-0a27cd77d546a8e19"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067d56d3bc4b6630f",
            "route_table_id": "rtb-05fe9f0c234a5a273",
            "subnet_id": "subnet-02c3046db54bfe84a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e32f9289e3d89ee",
            "route_table_id": "rtb-0b7cb029b37517f96",
            "subnet_id": "subnet-007698f3873151b29"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0936ab5914e4e1855",
            "route_table_id": "rtb-0b7cb029b37517f96",
            "subnet_id": "subnet-0283e507f0b1e3595"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276824025294:security-group/sg-0f97389a8dd7d819d",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f97389a8dd7d819d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "silversupport-alpha-alb-sg",
            "name_prefix": "",
            "owner_id": "276824025294",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "alpha",
              "Name": "silversupport-alpha-alb-sg",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "alpha",
              "ManagedBy": "Terraform",
              "Name": "silversupport-alpha-alb-sg",
              "Owner": "Aspire-Admin",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb2ba8aafc808e12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276824025294:security-group/sg-0c8c2ef7f771ed4ca",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8c2ef7f771ed4ca",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f97389a8dd7d819d"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "silversupport-alpha-ecs-sg",
            "name_prefix": "",
            "owner_id": "276824025294",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "alpha",
              "Name": "silversupport-alpha-ecs-sg",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "alpha",
              "ManagedBy": "Terraform",
              "Name": "silversupport-alpha-ecs-sg",
              "Owner": "Aspire-Admin",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb2ba8aafc808e12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276824025294:security-group/sg-0fa4cbc54e7298215",
            "description": "Security group for RDS database",
            "egress": [],
            "id": "sg-0fa4cbc54e7298215",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c8c2ef7f771ed4ca"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "silversupport-alpha-rds-sg",
            "name_prefix": "",
            "owner_id": "276824025294",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "alpha",
              "Name": "silversupport-alpha-rds-sg",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "alpha",
              "ManagedBy": "Terraform",
              "Name": "silversupport-alpha-rds-sg",
              "Owner": "Aspire-Admin",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb2ba8aafc808e12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276824025294:subnet/subnet-0a27cd77d546a8e19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a27cd77d546a8e19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "276824025294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "alpha",
              "Name": "silversupport-alpha-private-1",
              "Project": "SilverSupport",
              "Terraform": "true",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "alpha",
              "ManagedBy": "Terraform",
              "Name": "silversupport-alpha-private-1",
              "Owner": "Aspire-Admin",
              "Project": "SilverSupport",
              "Terraform": "true",
              "Type": "Private"
            },
            "vpc_id": "vpc-0bb2ba8aafc808e12"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276824025294:subnet/subnet-02c3046db54bfe84a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c3046db54bfe84a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "276824025294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "alpha",
              "Name": "silversupport-alpha-private-2",
              "Project": "SilverSupport",
              "Terraform": "true",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "alpha",
              "ManagedBy": "Terraform",
              "Name": "silversupport-alpha-private-2",
              "Owner": "Aspire-Admin",
              "Project": "SilverSupport",
              "Terraform": "true",
              "Type": "Private"
            },
            "vpc_id": "vpc-0bb2ba8aafc808e12"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276824025294:subnet/subnet-007698f3873151b29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007698f3873151b29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "276824025294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "alpha",
              "Name": "silversupport-alpha-public-1",
              "Project": "SilverSupport",
              "Terraform": "true",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "alpha",
              "ManagedBy": "Terraform",
              "Name": "silversupport-alpha-public-1",
              "Owner": "Aspire-Admin",
              "Project": "SilverSupport",
              "Terraform": "true",
              "Type": "Public"
            },
            "vpc_id": "vpc-0bb2ba8aafc808e12"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276824025294:subnet/subnet-0283e507f0b1e3595",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0283e507f0b1e3595",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "276824025294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "alpha",
              "Name": "silversupport-alpha-public-2",
              "Project": "SilverSupport",
              "Terraform": "true",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "alpha",
              "ManagedBy": "Terraform",
              "Name": "silversupport-alpha-public-2",
              "Owner": "Aspire-Admin",
              "Project": "SilverSupport",
              "Terraform": "true",
              "Type": "Public"
            },
            "vpc_id": "vpc-0bb2ba8aafc808e12"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276824025294:vpc/vpc-0bb2ba8aafc808e12",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c859a50e5166b874",
            "default_route_table_id": "rtb-0336ef5241f1fbfe2",
            "default_security_group_id": "sg-0db2d6c4fdd429516",
            "dhcp_options_id": "dopt-0377db6b35ae07350",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bb2ba8aafc808e12",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0336ef5241f1fbfe2",
            "owner_id": "276824025294",
            "tags": {
              "Environment": "alpha",
              "Name": "silversupport-alpha-vpc",
              "Project": "SilverSupport",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "alpha",
              "ManagedBy": "Terraform",
              "Name": "silversupport-alpha-vpc",
              "Owner": "Aspire-Admin",
              "Project": "SilverSupport",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}